--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,32 +33,29 @@ const work = await Promise.all(
 <PageLayout title={HOME.TITLE} description={HOME.DESCRIPTION}>
   <Container>
     <h4 class="animate font-semibold text-black dark:text-white">
-      Hi, I'm Nano <span class="text-xl">👋🏻</span> 
+      Hi, I'm Faisal Mujawar <span class="text-xl">👋🏻</span> 
     </h4>
     <div class="space-y-16">
       <section>
         <article class="space-y-4">
           <p class="animate">
-            I am a minimal, seo friendly, accessible portfolio and blog for developers. 
-            I am an even more lightweight version of my popular theme
-            <Link href="https://github.com/markhorn-dev/astro-sphere" aria-label="Astro Sphere on Github" external>
-              Astro Sphere
+            I'm a Computer Science student at Royal Holloway, University of London, currently in my second year. I've actively participated in several hackathons, including
+            Royal Hackaway V7, where I made: 
+            <Link href="https://faisalmujawar148.github.io/CyberRunner/" aria-label="CyberRunner Game" external>
+              CyberRunner
             </Link>.
-            I have a lighthouse scores of 100 across the board for performance, 
-            accesibility, best practices and SEO.
+            With a solid foundation in programming and web development, I have hands-on experience with Python, MySQL, HTML, CSS, JavaScript, Phaser.js, and Java.
           </p>
           <p class="animate">
-            I come packed with full type safety, a sitemap, an rss feed, markdown 
-            and mdx support (use components in your markdown) through astro integrations.
-            I am styled with tailwind and come preconfigured with light, dark and 
-            system/os theme preferences out of the box.
+            I have developed various projects that showcase my skills, emphasizing clean code, efficient algorithms, and responsive designs. 
+            I am dedicated to continuous learning and exploring new technologies to enhance my expertise.
           </p>
           <p class="animate">
             Visit
-            <Link href="https://github.com/markhorn-dev/astro-nano" aria-label="Astro Nano on Github" external>
-              Astro Nano on Github
+            <Link href="https://github.com/faisalmujawar148" aria-label="Portfolio on Github" external>
+              My Portfolio on Github
             </Link>
-            to fork the repository, read the docs or one-click deploy on Vercel or Netlify. 
+            to fork the repository or read the docs. 
           </p>
         </article>
       </section>
