--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -8,10 +8,10 @@ const { date } = Astro.props;
 
 <time datetime={date.toISOString()}>
   {
-    date.toLocaleDateString("en-us", {
+    date.toLocaleDateString("en-GB", {
+      year: "numeric",
       month: "short",
       day: "numeric",
-      year: "numeric",
     })
   }
 </time>
