--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -64,7 +64,7 @@ import { SITE } from "@consts";
               <button
                 id="dark-theme-button"
                 aria-label="Dark theme"
-                class="group size-7 flex items-center justify-center rounded-full hidden"
+                class="group size-7 flex items-center justify-center rounded-full"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
